app/styles/app.css
/* ... */
.left-side-padding{
    padding-right: 5px;
}
.right-side-padding{
    padding-left: 5px;
}
.play-word-main-outer{
    position: absolute;
    top: 10%;
    left: 0%;
    margin-left: 0%;
    width: 60%;
    border-color: rgba(255,255,255,0);
    height: 80%;
    padding: 0px;
    border-width: 1px;
    border-style: solid;
    background-color: white;
    border-radius: 10px;
    box-shadow: 6px 4px 6px #888888;
}
.play-word-main-inner{
    /*
    position: relative;
    left: 40%;
    top: 50%;
    */
    font-size: 30px;

}
.play-word-main-text{
    position: relative;
    z-index: 9999;
}
.row-margin{
    margin-top: -10px;
}
.highlighted{
    box-shadow: 0 0 7px rgba(255, 245, 0, 1);
    border: 1px solid rgba(255, 248, 84, 1);
}
.topcoat-notification-outer{
    position: absolute;
    top: 50%;
    right: 40px;
}
.topcoat-notification-inner{
    position: relative;
    margin-top: -50%;
}
.badge-right{
    right: 47px;
    position: absolute;
    top: 13px;
    background-color: #496050;
}

.slidingCard220{
    /*
    -webkit-animation: slide-to-120 1s 1;
    -moz-animation:    slide-to-120 1s 1;
    -o-animation:      slide-to-120 1s 1;
    animation:         slide-to-120 1s 1;
    */
    -webkit-transition: 1s;
    -moz-transition: 1s;
    -ms-transition: 1s;
    -o-transition: 1s;
    transition: 1s;
    left: 220% !important;
    opacity: 0;
}
.slidingCard20{
    /*
    -webkit-animation: slide-to-20 1s 1;
    -moz-animation:    slide-to-20 1s 1;
    -o-animation:      slide-to-20 1s 1;
    animation:         slide-to-20 1s 1;
    */
    -webkit-transition: 0.5s;
    -moz-transition: 0.5s;
    -ms-transition: 0.5s;
    -o-transition: 0.5s;
    transition: 0.5s;
    left: 20% !important;
    opacity: 1;
}
.slidingCard-180{
    /*
    -webkit-animation: slide-to--80 1s 1;
    -moz-animation:    slide-to--80 1s 1;
    -o-animation:      slide-to--80 1s 1;
    animation:         slide-to--80 1s 1;
    */
    -webkit-transition: 0.5s;
    -moz-transition: 0.5s;
    -ms-transition: 0.5s;
    -o-transition: 0.5s;
    transition: 0.5s;
    left: -180% !important;
    opacity: 0;
}
.flipCard-0{
    /*
    -webkit-animation: slide-to--80 1s 1;
    -moz-animation:    slide-to--80 1s 1;
    -o-animation:      slide-to--80 1s 1;
    animation:         slide-to--80 1s 1;
    */
    -webkit-transition: 0.5s;
    -moz-transition: 0.5s;
    -ms-transition: 0.5s;
    -o-transition: 0.5s;
    transition: 0.5s;
    -webkit-transform: rotateY(0deg);
    transform: rotateY(0deg);
}
.flipCard-180{
    /*
    -webkit-animation: slide-to--80 1s 1;
    -moz-animation:    slide-to--80 1s 1;
    -o-animation:      slide-to--80 1s 1;
    animation:         slide-to--80 1s 1;
    */
    -webkit-transition: 0.5s;
    -moz-transition: 0.5s;
    -ms-transition: 0.5s;
    -o-transition: 0.5s;
    transition: 0.5s;
    -webkit-transform: rotateY(180deg);
    transform: rotateY(180deg);
}
.card-container{
    position: relative;
    margin-top: -10px;
    margin-bottom: 5px;
}

/* entire container, keeps perspective */
.flip-container {
    -webkit-perspective: 1000;
    -moz-perspective: 1000;
    -ms-perspective: 1000;
    perspective: 1000;
    -ms-transform: perspective(1000px);
    -moz-transform: perspective(1000px);
    -moz-transform-style: preserve-3d;
    -ms-transform-style: preserve-3d;
    -webkit-transform-style: preserve-3d;

    -webkit-transition: 0.6s;
    -ms-transition: 0.6s;
    -moz-transition: 0.6s;
    transition: 0.6s;
}
/* flip the pane when hovered */
.flip{
    -webkit-transform: rotateY(-180deg);
    -moz-transform: rotateY(-180deg);
    -o-transform: rotateY(-180deg);
    -ms-transform: rotateY(-180deg);
    transform: rotateY(-180deg);

    -webkit-transition: 0.6s;
    -webkit-transform-style: preserve-3d;
    -ms-transition: 0.6s;
    -moz-transition: 0.6s;
    -moz-transform: perspective(1000px);
    -moz-transform-style: preserve-3d;
    -ms-transform-style: preserve-3d;
    transition: 0.6s;
    transform-style: preserve-3d;
}

.flip-container, .front, .back {

}

/* flip speed goes here */
.flipper {
    -webkit-transition: 0.6s;
    -webkit-transform-style: preserve-3d;
    -ms-transition: 0.6s;
    -moz-transition: 0.6s;
    -moz-transform: perspective(1000px);
    -moz-transform-style: preserve-3d;
    -ms-transform-style: preserve-3d;
    transition: 0.6s;
    transform-style: preserve-3d;
    position: absolute;
    top: 50%;
    left: 50%;
    height: 10%;
    width: 80%;
    /*
    position: absolute;
    left: 50%;
    top: 50%;
    */
}
.flipper-outer{
    position: absolute;
    /*
    left: 0%;
    top: 50%;

    position: absolute;
    left: -50%;
    top: -50%;
    */
}
/* hide back of pane during swap */
.front, .back {
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    -ms-backface-visibility: hidden;
    backface-visibility: hidden;

    -webkit-transform-style: preserve-3d;
    -moz-transform-style: preserve-3d;
    -o-transform-style: preserve-3d;
    -ms-transform-style: preserve-3d;
    transform-style: preserve-3d;
    /*
    -webkit-transition: 0.6s;
    -moz-transition: 0.6s;
    -o-transition: 0.6s;
    -ms-transition: 0.6s;
    transition: 0.6s;
    */
    position: relative;
    top: -50%;

}

/* front pane, placed above back */
.front {
    -webkit-transform: translateZ(1px);
    -moz-transform: translateZ(1px);
    -o-transform: translateZ(1px);
    -ms-transform: translateZ(1px);
    transform: translateZ(1px);
    left: -50%;
}

/* back, initially hidden pane */
.back {
    -webkit-transform: rotateY(-180deg) translateZ(1px);
    -moz-transform: rotateY(-180deg) translateZ(1px);
    -o-transform: rotateY(-180deg) translateZ(1px);
    -ms-transform: rotateY(-180deg) translateZ(1px);
    transform: rotateY(-180deg) translateZ(1px);
    right: 50%;

}
/* ... */

